// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`uikit/checkbox should renders correctly 1`] = `
<label
  class="box align_center"
>
  <span
    class="dt-checkbox dt-checkbox-checked"
  >
    <input
      checked=""
      class="dt-checkbox-input"
      data-role="checkbox_item"
      type="checkbox"
    />
    <span
      class="dt-checkbox-inner"
    />
  </span>
  <p
    class="box base general s left"
    data-role="checkbox_text_label"
    style="margin-left:8px"
  >
    label
  </p>
</label>
`;

exports[`uikit/checkbox should renders correctly label="label" 1`] = `
<span
  class="dt-checkbox dt-checkbox-checked"
>
  <input
    checked=""
    class="dt-checkbox-input"
    data-role="checkbox_item"
    type="checkbox"
  />
  <span
    class="dt-checkbox-inner"
  />
</span>
`;

exports[`uikit/checkbox should renders correctly label=<span /> 1`] = `
<label
  class="box align_center"
>
  <span
    class="dt-checkbox dt-checkbox-checked"
  >
    <input
      checked=""
      class="dt-checkbox-input"
      data-role="checkbox_item"
      type="checkbox"
    />
    <span
      class="dt-checkbox-inner"
    />
  </span>
  <span />
</label>
`;
